--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,6 @@ fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots/**/*.png
 fastlane/test_output
+
+MyLive/HaishinKit/Vendor/SRT/OpenSSL-for-iPhone/
+MyLive/HaishinKit/Vendor/SRT/srt/
