--- a/MyLive/Info.plist
+++ b/MyLive/Info.plist
@@ -17,15 +17,19 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.4.0</string>
+	<string>$(MARKETING_VERSION)</string>
 	<key>CFBundleVersion</key>
-	<string>1.4.0</string>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
 	<string>This app uses camera for video</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>This app uses microphone for video audio</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>This app uses Photo Library for video</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app uses Photo Library for video</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
