--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,5 @@ fastlane/test_output
 
 MyLive/HaishinKit/Vendor/SRT/OpenSSL-for-iPhone/
 MyLive/HaishinKit/Vendor/SRT/srt/
+MyLive/Vendor/SRT/OpenSSL-for-iPhone
+MyLive/Vendor/SRT/srt
