Change segment color

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,4 @@ MyLive/HaishinKit/Vendor/SRT/OpenSSL-for-iPhone/
 MyLive/HaishinKit/Vendor/SRT/srt/
 MyLive/Vendor/SRT/OpenSSL-for-iPhone
 MyLive/Vendor/SRT/srt
+MyLive/Vendor/SRT/srt-old
